# zeroagent

./: .gitignore  DESIGN.md  README.md  __init__.py  __main__.py  demo.py  langchain-sdk-test.py  pyproject.toml  sdk.py
core/: llm.py  memory.py
harness/: agent.py  executor.py
src/zeroagent/: __init__.py  __main__.py  demo.py  sdk.py
src/zeroagent/core/: async_llm.py  llm.py  loop.py  memory.py  tools.py
src/zeroagent/harness/: agent.py  async_loop.py  loop.py  memory.py  parser.py
src/zeroagent/tests/: test_async.py  test_llm.py  test_memory.py  test_tools.py  test_workflow.py
src/zeroagent/workflow/: __init__.py  graph.py  node.py  state.py
tests/: test_harness.py  test_llm.py
