[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zeroagent"
version = "0.0.1"
description = "Agent IA + Workflow SDK en Python pur. Zéro dépendance externe."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
vector = ["numpy>=1.24"]
dev = ["build", "twine"]

[project.scripts]
zeroagent = "zeroagent.__main__:main"

[project.urls]
Repository = "https://github.com/Tahsine/zeroagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["zeroagent*"]
exclude = ["zeroagent.tests*"]
